--- a/index.html
+++ b/index.html
@@ -4,15 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GIK2F8 - Sökfuntkion</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>GIK2F8 - Sökfunktion</title>
   </head>
-
-  <body class="bg-teal-600 background-color: rgb(13 148 136);">
-    <h1 class="text-6xl text-Black-900">Sök böcker</h1>
-    <main class="w-4/5 mx-auto bg-white">
-      <label for="searchField">Ange sökord</label
-      ><input id="searchField" type="text" />
+  <body class="bg-gradient-to-tr from-sky-400 to-lime-500 h-screen">
+    <h1 class="text-6xl text-green-900 text-center mt-4 mb-7">Sök böcker</h1>
+    <main
+      class="bg-white/40 py-12 px-6 w-full md:w-4/5 mx-auto rounded-lg flex justify-center align-center flex-col gap-2"
+    >
+      <label class="text-green-900 text-xl block" for="searchField"
+        >Ange sökord</label
+      >
+      <input class="rounded-full p-2" id="searchField" type="text" />
+      <ul
+        class="book-list rounded-md border-2 border-blue-400 bg-white w-full mx-autp"
+      >
+        <li
+          class="book-listitem mb-2 mx-2 last:mb-0 p-3 text-indigo-800 last:border-b-0 border-b border-indigo-500 cursor-pointer"
+        >
+          1
+        </li>
+        <li
+          class="book-listitem mb-2 mx-2 last:mb-0 p-3 text-indigo-800 last:border-b-0 border-b border-indigo-500 cursor-pointer"
+        >
+          2
+        </li>
+      </ul>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
